--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,49 @@
+2020-01-09  Kocsen Chung  <kocsen_chung@apple.com>
+
+        Cherry-pick r254220. rdar://problem/58450166
+
+    Fix specification violation in Font Loading API
+    https://bugs.webkit.org/show_bug.cgi?id=205901
+    <rdar://problem/58083743>
+    
+    Reviewed by Brent Fulgham.
+    
+    Source/WebCore:
+    
+    Our Font Loading API does not comply with the spec:
+    
+    > If the parsed value is a CSS-wide keyword, return a syntax error.
+    
+    Rather than crashing, we should return a syntax error.
+    
+    Test: fast/text/font-loading-global-keyword.html
+    
+    * css/CSSFontFaceSet.cpp:
+    (WebCore::computeFontSelectionRequest):
+    (WebCore::CSSFontFaceSet::matchingFacesExcludingPreinstalledFonts):
+    
+    LayoutTests:
+    
+    Test all the entry points to the CSS Font Loading API that accept CSS keywords.
+    
+    * fast/text/font-loading-global-keyword-expected.txt: Added.
+    * fast/text/font-loading-global-keyword.html: Added.
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254220 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-08  Myles C. Maxfield  <mmaxfield@apple.com>
+
+            Fix specification violation in Font Loading API
+            https://bugs.webkit.org/show_bug.cgi?id=205901
+            <rdar://problem/58083743>
+
+            Reviewed by Brent Fulgham.
+
+            Test all the entry points to the CSS Font Loading API that accept CSS keywords.
+
+            * fast/text/font-loading-global-keyword-expected.txt: Added.
+            * fast/text/font-loading-global-keyword.html: Added.
+
 2019-12-18  Dan Robson  <dan_robson@apple.com>
 
         Cherry-pick r253563. rdar://problem/58049160
