--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,7 @@
+2020-01-14  Kocsen Chung  <kocsen_chung@apple.com>
+
+        Revert r254392. rdar://problem/58542040
+
 2020-01-10  Yusuke Suzuki  <ysuzuki@apple.com>
 
         [WebCore] Fix crash in module loader due to change in fragment reservation
