Revert r254521. rdar://problem/58542040
Canonical link: https://commits.webkit.org/219244.4@safari-610.1.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.1-branch@254536 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,9 @@
 2020-01-14  Kocsen Chung  <kocsen_chung@apple.com>
 
+        Revert r254521. rdar://problem/58542040
+
+2020-01-14  Kocsen Chung  <kocsen_chung@apple.com>
+
         Revert r254392. rdar://problem/58542040
 
 2020-01-10  Yusuke Suzuki  <ysuzuki@apple.com>
