--- a/Source/WebKitLegacy/mac/ChangeLog
+++ b/Source/WebKitLegacy/mac/ChangeLog
@@ -1,3 +1,99 @@
+2020-01-14  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r254042. rdar://problem/58549102
+
+    Source/WebCore/PAL:
+    DumpRenderTree doesn't always call updateRendering() when a test completes
+    https://bugs.webkit.org/show_bug.cgi?id=205761
+    
+    Reviewed by Darin Adler.
+    
+    Add -[CATransaction synchronize].
+    
+    * pal/spi/cocoa/QuartzCoreSPI.h:
+    
+    Source/WebKit:
+    DumpRenderTree doesn't always call updateRendering() when a test completes
+    https://bugs.webkit.org/show_bug.cgi?id=205761
+    
+    Reviewed by Darin Adler.
+    
+    Use the QuartzCore SPI header.
+    
+    * WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
+    
+    Source/WebKitLegacy/mac:
+    Fix a souce of WebKit1 test flakiness
+    https://bugs.webkit.org/show_bug.cgi?id=205761
+    
+    Reviewed by Darin Adler.
+    
+    Some animation tests (and possibly many others) are flakey or broken in WK1 because
+    there was no code to guarantee that Page::updateRendering() was called at notifyDone()
+    time.
+    
+    WK2 calls DrawingArea::forceRepaint(), which does updateRendering(), flushes layers,
+    and flushes a CATransaction.
+    
+    In WK1, we historically relied in AppKit to call -viewWillDraw on WebView and/or WebHTMLView,
+    and just called [webView display] to make this happen. However, with layer backing, AppKit behavior
+    changes, and WebCore changes that make more things happen with HTML event loop timing, this
+    approach no longer works. The fix is to add WebView SPI, _forceRepaintForTesting, which emulates what
+    WK2 is doing.
+    
+    * WebView/WebView.mm:
+    (-[WebView _forceRepaintForTesting]):
+    * WebView/WebViewPrivate.h:
+    
+    Tools:
+    DumpRenderTree doesn't always call updateRendering() when a test completes
+    https://bugs.webkit.org/show_bug.cgi?id=205761
+    
+    Reviewed by Darin Adler.
+    
+    Some animation tests (and possibly many others) are flakey or broken in WK1 because
+    there was no code to guarantee that Page::updateRendering() was called at notifyDone()
+    time.
+    
+    WK2 calls DrawingArea::forceRepaint(), which does updateRendering(), flushes layers,
+    and flushes a CATransaction.
+    
+    In WK1, we historically relied in AppKit to call -viewWillDraw on WebView and/or WebHTMLView,
+    and just called [webView display] to make this happen. However, with layer backing, AppKit behavior
+    changes, and WebCore changes that make more things happen with HTML event loop timing, this
+    approach no longer works. The fix is to add WebView SPI, _forceRepaintForTesting, which emulates what
+    WK2 is doing.
+    
+    * DumpRenderTree/mac/DumpRenderTree.mm:
+    (updateDisplay):
+    * DumpRenderTree/mac/PixelDumpSupportMac.mm:
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254042 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-05  Simon Fraser  <simon.fraser@apple.com>
+
+            Fix a souce of WebKit1 test flakiness
+            https://bugs.webkit.org/show_bug.cgi?id=205761
+
+            Reviewed by Darin Adler.
+
+            Some animation tests (and possibly many others) are flakey or broken in WK1 because
+            there was no code to guarantee that Page::updateRendering() was called at notifyDone()
+            time.
+
+            WK2 calls DrawingArea::forceRepaint(), which does updateRendering(), flushes layers,
+            and flushes a CATransaction.
+
+            In WK1, we historically relied in AppKit to call -viewWillDraw on WebView and/or WebHTMLView,
+            and just called [webView display] to make this happen. However, with layer backing, AppKit behavior
+            changes, and WebCore changes that make more things happen with HTML event loop timing, this
+            approach no longer works. The fix is to add WebView SPI, _forceRepaintForTesting, which emulates what
+            WK2 is doing.
+
+            * WebView/WebView.mm:
+            (-[WebView _forceRepaintForTesting]):
+            * WebView/WebViewPrivate.h:
+
 2020-01-03  Yusuke Suzuki  <ysuzuki@apple.com>
 
         Put more WebCore/WebKit JS objects into IsoSubspace
