--- a/Source/WebKitLegacy/mac/ChangeLog
+++ b/Source/WebKitLegacy/mac/ChangeLog
@@ -1,5 +1,34 @@
 2020-01-14  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r254063. rdar://problem/58559198
+
+    [Web Animations] Enable CSS Animations via Web Animations for WebKitLegacy
+    https://bugs.webkit.org/show_bug.cgi?id=205791
+    
+    Patch by Antoine Quint <graouts@apple.com> on 2020-01-06
+    Reviewed by Dean Jackson.
+    
+    It was an oversight that it had not been done along with the WebKit change.
+    
+    * WebView/WebPreferences.mm:
+    (+[WebPreferences initialize]):
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254063 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-06  Antoine Quint  <graouts@apple.com>
+
+            [Web Animations] Enable CSS Animations via Web Animations for WebKitLegacy
+            https://bugs.webkit.org/show_bug.cgi?id=205791
+
+            Reviewed by Dean Jackson.
+
+            It was an oversight that it had not been done along with the WebKit change.
+
+            * WebView/WebPreferences.mm:
+            (+[WebPreferences initialize]):
+
+2020-01-14  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r254042. rdar://problem/58549102
 
     Source/WebCore/PAL:
