--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,37 @@
 2020-01-14  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r254074. rdar://problem/58549078
+
+    REGRESSION: [r254042] pageoverlay/overlay- tests are failing in WK1
+    https://bugs.webkit.org/show_bug.cgi?id=205810
+    
+    Unreviewed test gardening. Page Overlay test in WK1 now dump one or more repaint rects after r254042.
+    
+    
+    * platform/mac-wk1/pageoverlay/overlay-installation-expected.txt:
+    * platform/mac-wk1/pageoverlay/overlay-large-document-expected.txt:
+    * platform/mac-wk1/pageoverlay/overlay-large-document-scrolled-expected.txt:
+    * platform/mac-wk1/pageoverlay/overlay-small-frame-mouse-events-expected.txt:
+    * platform/mac-wk1/pageoverlay/overlay-small-frame-paints-expected.txt:
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254074 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-06  Simon Fraser  <simon.fraser@apple.com>
+
+            REGRESSION: [r254042] pageoverlay/overlay- tests are failing in WK1
+            https://bugs.webkit.org/show_bug.cgi?id=205810
+
+            Unreviewed test gardening. Page Overlay test in WK1 now dump one or more repaint rects after r254042.
+
+            * platform/mac-wk1/pageoverlay/overlay-installation-expected.txt:
+            * platform/mac-wk1/pageoverlay/overlay-large-document-expected.txt:
+            * platform/mac-wk1/pageoverlay/overlay-large-document-scrolled-expected.txt:
+            * platform/mac-wk1/pageoverlay/overlay-small-frame-mouse-events-expected.txt:
+            * platform/mac-wk1/pageoverlay/overlay-small-frame-paints-expected.txt:
+
+2020-01-14  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r254059. rdar://problem/58552861
 
     REGRESSION: [ Mac Debug ] inspector/page/setBootstrapScript-main-frame.html is a flaky failure
