--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,5 +1,38 @@
 2020-01-14  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r254099. rdar://problem/58552889
+
+    [iOS] Only prewarm fonts with valid font names
+    https://bugs.webkit.org/show_bug.cgi?id=205822
+    
+    Reviewed by Brent Fulgham.
+    
+    The font names ".SF NS Text" and ".SF NS Display" are not valid on iOS, and should not be prewarmed.
+    
+    No new tests, no behavior change.
+    
+    * platform/graphics/cocoa/FontCacheCoreText.cpp:
+    (WebCore::FontCache::prewarmGlobally):
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254099 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-06  Per Arne Vollan  <pvollan@apple.com>
+
+            [iOS] Only prewarm fonts with valid font names
+            https://bugs.webkit.org/show_bug.cgi?id=205822
+
+            Reviewed by Brent Fulgham.
+
+            The font names ".SF NS Text" and ".SF NS Display" are not valid on iOS, and should not be prewarmed.
+
+            No new tests, no behavior change.
+
+            * platform/graphics/cocoa/FontCacheCoreText.cpp:
+            (WebCore::FontCache::prewarmGlobally):
+
+2020-01-14  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r254067. rdar://problem/58552878
 
     REGRESSION(r247626): Introduced memory regression
