--- a/Source/WebCore/PAL/ChangeLog
+++ b/Source/WebCore/PAL/ChangeLog
@@ -1,5 +1,44 @@
 2020-01-14  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r254141. rdar://problem/58559202
+
+    Flaky API Test: TestWebKitAPI.WebKitLegacy.AudioSessionCategoryIOS
+    https://bugs.webkit.org/show_bug.cgi?id=194340
+    <rdar://problem/50507254>
+    
+    Reviewed by Eric Carlson.
+    
+    Workaround for AVFoundation crash for OS versions prior to platform fix. This crash occurrs infrequently
+    while triggering KVO due to an internal @property change. Work around the crash by disabling KVO for that
+    property at runtime, by injecting a new class method +automaticallyNotifiesObserversOfSuppressesVideoLayers
+    immediately after soft linking the AVFoundation library.
+    
+    * pal/cocoa/AVFoundationSoftLink.mm:
+    (PAL::justReturnsNO):
+    (PAL::AVFoundationLibrary):
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254141 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-07  Jer Noble  <jer.noble@apple.com>
+
+            Flaky API Test: TestWebKitAPI.WebKitLegacy.AudioSessionCategoryIOS
+            https://bugs.webkit.org/show_bug.cgi?id=194340
+            <rdar://problem/50507254>
+
+            Reviewed by Eric Carlson.
+
+            Workaround for AVFoundation crash for OS versions prior to platform fix. This crash occurrs infrequently
+            while triggering KVO due to an internal @property change. Work around the crash by disabling KVO for that
+            property at runtime, by injecting a new class method +automaticallyNotifiesObserversOfSuppressesVideoLayers
+            immediately after soft linking the AVFoundation library.
+
+            * pal/cocoa/AVFoundationSoftLink.mm:
+            (PAL::justReturnsNO):
+            (PAL::AVFoundationLibrary):
+
+2020-01-14  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r254042. rdar://problem/58549102
 
     Source/WebCore/PAL:
