--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,52 @@
 2020-01-14  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r254145. rdar://problem/58552861
+
+    REGRESSION: [ Mac Debug ] inspector/page/setBootstrapScript-main-frame.html is a flaky failure
+    https://bugs.webkit.org/show_bug.cgi?id=205807
+    <rdar://problem/58344669>
+    
+    Reviewed by Dean Jackson.
+    
+    Source/WebInspectorUI:
+    
+    * UserInterface/Controllers/NetworkManager.js:
+    (WI.NetworkManager.prototype.async createBootstrapScript):
+    (WI.NetworkManager.prototype._handleBootstrapScriptContentDidChange):
+    Ensure that `Page.setBootstrapScript` is called when restoring the bootstrap script from the
+    IndexedDB storage. Otherwise, in situations like when Web Inspector is first opened, we will
+    show the Inspector Bootstrap Script in the UI, but not actually set it on the inspected page.
+    
+    LayoutTests:
+    
+    * inspector/page/setBootstrapScript-main-frame.html:
+    In addition to waiting for `Page.reload`, we should also wait for the page to actually load.
+    Set the content of the bootstrap script during its creation instead of as a two step process.
+    Avoid an assertion by setting the enabled state after the bootstrap script is initalized.
+    
+    * platform/mac/TestExpectations:
+    Remove expectation added in r254059.
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254145 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-07  Devin Rousso  <drousso@apple.com>
+
+            REGRESSION: [ Mac Debug ] inspector/page/setBootstrapScript-main-frame.html is a flaky failure
+            https://bugs.webkit.org/show_bug.cgi?id=205807
+            <rdar://problem/58344669>
+
+            Reviewed by Dean Jackson.
+
+            * inspector/page/setBootstrapScript-main-frame.html:
+            In addition to waiting for `Page.reload`, we should also wait for the page to actually load.
+            Set the content of the bootstrap script during its creation instead of as a two step process.
+            Avoid an assertion by setting the enabled state after the bootstrap script is initalized.
+
+            * platform/mac/TestExpectations:
+            Remove expectation added in r254059.
+
+2020-01-14  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r254074. rdar://problem/58549078
 
     REGRESSION: [r254042] pageoverlay/overlay- tests are failing in WK1
