Cherry-pick r254244. rdar://problem/58553148
    Instruction.h: Multiplication result converted to larger type
    https://bugs.webkit.org/show_bug.cgi?id=205945

    Reviewed by Mark Lam.

    * bytecode/Instruction.h:
    (JSC::BaseInstruction::size const):
    Changed the types to size_t so that the computation is computed accordingly.

    Canonical link: https://commits.webkit.org/219100@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254244 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/218903.38@safari-609-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@254602 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/JavaScriptCore/ChangeLog
+++ b/Source/JavaScriptCore/ChangeLog
@@ -1,5 +1,33 @@
 2020-01-14  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r254244. rdar://problem/58553148
+
+    Instruction.h: Multiplication result converted to larger type
+    https://bugs.webkit.org/show_bug.cgi?id=205945
+    
+    Reviewed by Mark Lam.
+    
+    * bytecode/Instruction.h:
+    (JSC::BaseInstruction::size const):
+    Changed the types to size_t so that the computation is computed accordingly.
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254244 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-08  Michael Saboff  <msaboff@apple.com>
+
+            Instruction.h: Multiplication result converted to larger type
+            https://bugs.webkit.org/show_bug.cgi?id=205945
+
+            Reviewed by Mark Lam.
+
+            * bytecode/Instruction.h:
+            (JSC::BaseInstruction::size const):
+            Changed the types to size_t so that the computation is computed accordingly.
+
+
+2020-01-14  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r254218. rdar://problem/58553153
 
     JSArrayBufferView.h: Multiplication result converted to larger type
