--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,35 @@
 2020-01-14  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r254261. rdar://problem/58549081
+
+    REGRESSION: [ Mac wk2 ] http/wpt/service-workers/persistent-importScripts.html is a flaky failure
+    https://bugs.webkit.org/show_bug.cgi?id=205886
+    <rdar://problem/58387910>
+    
+    Reviewed by Chris Dumez.
+    
+    Make sure registrations are stored on disk before crashing the network process.
+    
+    * http/wpt/service-workers/persistent-importScripts.html:
+    * platform/mac-wk2/TestExpectations:
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254261 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-09  youenn fablet  <youenn@apple.com>
+
+            REGRESSION: [ Mac wk2 ] http/wpt/service-workers/persistent-importScripts.html is a flaky failure
+            https://bugs.webkit.org/show_bug.cgi?id=205886
+            <rdar://problem/58387910>
+
+            Reviewed by Chris Dumez.
+
+            Make sure registrations are stored on disk before crashing the network process.
+
+            * http/wpt/service-workers/persistent-importScripts.html:
+            * platform/mac-wk2/TestExpectations:
+
+2020-01-14  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r254260. rdar://problem/58552882
 
     REGRESSION: [ Mac ] webrtc/video-autoplay.html is a flaky failure
