--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,42 @@
 2020-01-14  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r254287. rdar://problem/58552886
+
+    Fullscreen videos do not enter PiP in first tap
+    https://bugs.webkit.org/show_bug.cgi?id=205986
+    
+    Reviewed by Eric Carlson.
+    
+    This patch essentially reverts the fix for webkit.org/b/204461.
+    The fix for webkit.org/b/204461 depends on a fix in AVKit along
+    with a corresponding update in WebKit (webkit.org/b/204979).
+    We will need to reapply the fix for webkit.org/b/204461 after they are landed.
+    
+    * WebProcess/cocoa/VideoFullscreenManager.mm:
+    (WebKit::VideoFullscreenManager::enterVideoFullscreenForVideoElement):
+    (WebKit::VideoFullscreenManager::exitVideoFullscreenForVideoElement):
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254287 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-09  Peng Liu  <peng.liu6@apple.com>
+
+            Fullscreen videos do not enter PiP in first tap
+            https://bugs.webkit.org/show_bug.cgi?id=205986
+
+            Reviewed by Eric Carlson.
+
+            This patch essentially reverts the fix for webkit.org/b/204461.
+            The fix for webkit.org/b/204461 depends on a fix in AVKit along
+            with a corresponding update in WebKit (webkit.org/b/204979).
+            We will need to reapply the fix for webkit.org/b/204461 after they are landed.
+
+            * WebProcess/cocoa/VideoFullscreenManager.mm:
+            (WebKit::VideoFullscreenManager::enterVideoFullscreenForVideoElement):
+            (WebKit::VideoFullscreenManager::exitVideoFullscreenForVideoElement):
+
+2020-01-14  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r254254. rdar://problem/58548978
 
     WebKitTestRunner leaks objects in a top-level autoreleasePool that's never cleared
