--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,5 +1,54 @@
 2020-01-14  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r254288. rdar://problem/58548984
+
+    [Cocoa] persistent-usage-record message fails first time; succeeds subsequent times
+    https://bugs.webkit.org/show_bug.cgi?id=205970
+    <rdar://problem/57785647>
+    
+    Reviewed by Eric Carlson.
+    
+    The AVContentKeySession is created too early; before the CDM has a chance to provide the storage path
+    for persistent usage records. Delay creation of the AVCKS until it's actually needed during the first
+    license request.
+    
+    Drive-by fix: fix the exceptional case where a PUR session is closed but PUR data isn't available; send
+    a null message rather than an empty array.
+    
+    * platform/graphics/avfoundation/objc/CDMInstanceFairPlayStreamingAVFObjC.h:
+    * platform/graphics/avfoundation/objc/CDMInstanceFairPlayStreamingAVFObjC.mm:
+    (WebCore::CDMInstanceFairPlayStreamingAVFObjC::contentKeySession):
+    (WebCore::CDMInstanceSessionFairPlayStreamingAVFObjC::removeSessionData):
+    (WebCore::CDMInstanceFairPlayStreamingAVFObjC::CDMInstanceFairPlayStreamingAVFObjC): Deleted.
+    (WebCore::CDMInstanceFairPlayStreamingAVFObjC::ensureSession): Deleted.
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254288 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-09  Jer Noble  <jer.noble@apple.com>
+
+            [Cocoa] persistent-usage-record message fails first time; succeeds subsequent times
+            https://bugs.webkit.org/show_bug.cgi?id=205970
+            <rdar://problem/57785647>
+
+            Reviewed by Eric Carlson.
+
+            The AVContentKeySession is created too early; before the CDM has a chance to provide the storage path
+            for persistent usage records. Delay creation of the AVCKS until it's actually needed during the first
+            license request.
+
+            Drive-by fix: fix the exceptional case where a PUR session is closed but PUR data isn't available; send
+            a null message rather than an empty array.
+
+            * platform/graphics/avfoundation/objc/CDMInstanceFairPlayStreamingAVFObjC.h:
+            * platform/graphics/avfoundation/objc/CDMInstanceFairPlayStreamingAVFObjC.mm:
+            (WebCore::CDMInstanceFairPlayStreamingAVFObjC::contentKeySession):
+            (WebCore::CDMInstanceSessionFairPlayStreamingAVFObjC::removeSessionData):
+            (WebCore::CDMInstanceFairPlayStreamingAVFObjC::CDMInstanceFairPlayStreamingAVFObjC): Deleted.
+            (WebCore::CDMInstanceFairPlayStreamingAVFObjC::ensureSession): Deleted.
+
+2020-01-14  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r254239. rdar://problem/58549100
 
     Resource Load Statistics: Flip experimental cookie blocking setting from an enable to a disable
