--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,5 +1,49 @@
 2020-01-14  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r254344. rdar://problem/58559189
+
+    Add SPI to enable TLS 1.0 and 1.1 in WKWebViews
+    https://bugs.webkit.org/show_bug.cgi?id=206046
+    
+    Patch by Alex Christensen <achristensen@webkit.org> on 2020-01-10
+    Reviewed by Youenn Fablet.
+    
+    Source/WebKit:
+    
+    This is needed for <rdar://problem/58464912>
+    Covered by API tests.
+    
+    * UIProcess/API/Cocoa/_WKWebsiteDataStoreConfiguration.h:
+    * UIProcess/API/Cocoa/_WKWebsiteDataStoreConfiguration.mm:
+    (-[_WKWebsiteDataStoreConfiguration legacyTLSEnabled]):
+    (-[_WKWebsiteDataStoreConfiguration setLegacyTLSEnabled:]):
+    * UIProcess/WebsiteData/Cocoa/WebsiteDataStoreCocoa.mm:
+    (WebKit::WebsiteDataStore::parameters):
+    * UIProcess/WebsiteData/WebsiteDataStoreConfiguration.cpp:
+    (WebKit::WebsiteDataStoreConfiguration::copy const):
+    * UIProcess/WebsiteData/WebsiteDataStoreConfiguration.h:
+    (WebKit::WebsiteDataStoreConfiguration::legacyTLSEnabled const):
+    (WebKit::WebsiteDataStoreConfiguration::setLegacyTLSEnabled):
+    
+    Tools:
+    
+    * TestWebKitAPI/Tests/WebKitCocoa/TLSDeprecation.mm:
+    (TestWebKitAPI::TEST):
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254344 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-10  Alex Christensen  <achristensen@webkit.org>
+
+            Add SPI to enable TLS 1.0 and 1.1 in WKWebViews
+            https://bugs.webkit.org/show_bug.cgi?id=206046
+
+            Reviewed by Youenn Fablet.
+
+            * TestWebKitAPI/Tests/WebKitCocoa/TLSDeprecation.mm:
+            (TestWebKitAPI::TEST):
+
+2020-01-14  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r254254. rdar://problem/58548978
 
     WebKitTestRunner leaks objects in a top-level autoreleasePool that's never cleared
